# GroupPulse2

./: .env.example  .gitignore  Dockerfile  LOCAL_SETUP.md  Makefile  QUICK_START_UZ.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
SimpleListener/: README.md  listener.py  login.py
alembic/: env.py
alembic/versions/: 20260312_1040_099820c7345a_initial_migration.py
config/: settings.py
scripts/: create_db.py  migrate_db.py
src/: __init__.py  main.py
src/bot/: app.py
src/bot/handlers/: account.py  groups.py  keywords.py  rules.py  start.py
src/bot/keyboards/: main.py
src/bot/states/: __init__.py  account_setup.py
src/core/: humanizer.py  rate_limiter.py  rule_matcher.py  session_manager.py
src/database/: connection.py  models.py
src/database/repositories/: account_repo.py  base.py  rule_repo.py
src/services/: forwarding_service.py
src/userbot/: client.py  manager.py  worker.py
src/utils/: crypto.py  validators.py
